# cpp-datadogstatsd

./: CMakeLists.txt  CONTRIBUTING.md  DDEvent.cpp  DDEvent.h  DataDogStatsD.cpp  DataDogStatsD.h  DataDogStatsD.sln  DataDogStatsD.vcxproj  DataDogStatsD.vcxproj.filters  Helpers.cpp  Helpers.h  LICENSE  README.md  makefile
include/datadogstatsd/: DataDogStatsD.h
